# Motive

./: .coverage  .gitignore  AGENT.md  AGENTS.md  AI_LESSIONS.md  GET_BACK_ON_TRACK.md  HnS_update.md  MOTIVE_MANUAL.md  README.md  SIMULATION_V2_PLAN.md  VIBECODER.md  config.yaml  env.example.txt  hearth_and_shadow_character_update.md  pyproject.toml  raw_config.txt  requirements-dev.txt  requirements.txt  setup.ps1  setup.sh  test_utils.py
configs/: core.yaml  core_actions.yaml  core_actions_migrated.yaml  core_characters.yaml  core_migrated.yaml  core_objects.yaml  core_rooms.yaml  game.yaml  game_migrated.yaml  game_v2.yaml
docs/: AGENT.md  COMPETITIVE_ANALYSIS.md  CONTENT_CREATOR_GUIDE.md  CONTRIBUTORS.md  DETECTIVE_THORNE_MOTIVE_GUIDE.md  DOCS.md  HnS_update.md  LOG_ANALYSIS_GUIDE.md  MANUAL.md  PLAYTEST_WORKFLOW.md  TESTING_PROGRESS.md  TODO.md  VIBECODER.md  parallel_run_report.md  v2_action_test_coverage.md
motive/: action_parser.py  analyze.py  character.py  cli.py  config.py  config_loader.py  config_merging.py  config_validator.py  exceptions.py  game_initializer.py  game_master.py  game_object.py  game_rooms.py  inventory_constraints.py  list_merge_strategies.py  llm_factory.py  main.py  patch_system.py  player.py  requirements_evaluator.py  room.py  util.py
motive.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_action_aliases.py  test_action_feedback_formatting.py  test_action_formatting.py  test_action_matching_debug.py  test_action_parser.py  test_action_parser_debug.py  test_action_parser_quote_handling.py  test_action_parser_use_fix.py  (+198 more)
(+161 files in other folders)
